Fix Admin Users on Mobile

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -55,14 +55,18 @@
 .content {
     width: 100%;
     padding: 1.5em 1em;
+    padding-bottom: calc(80px + 1.5em);
+
+    @media only screen and (min-device-width: 768px) {
+        padding-bottom: 1.5em;
+    }
 }
 
 .content.navbar--enabled {
     width: 100%;
 
     @media only screen and (max-device-width: 767px) {
-        /* @TODO Improve / fix */
-        height: calc(80vh - 80px);
+        height: calc(100vh - 32px - 2em - 80px - 3em);
         overflow: hidden;
     }
 
